--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                 <p class="padding-left-rigt">Дизайн</p></div>
                 </li>
 
-                <li class="box-shadoww">
+                <li class="box-shadow">
                 <img src="./image/img02.jpg" alt="Seafood" width="370px" height="294px">
                 <div class="producta-padding">
                 <h3 class="padding-left-rigt">Ресторан Seafood</h3>
@@ -87,7 +87,7 @@
                 <p class="padding-left-rigt">Приложение</p></div>
                 </li>
 
-                <li class="box-shadoww box-shadow3">
+                <li class="box-shadow box-shadow3">
                 <img src="./image/img05.jpg" alt="Borders" width="370px" height="294px">
                 <div class="producta-padding">
                 <h3 lang="en" class="padding-left-rigt">Inspiration has no Borders</h3>
@@ -108,7 +108,7 @@
                 <p class="padding-left-rigt">Маркетинг</p></div>
                 </li>
 
-                <li class="box-shadoww box-shadow3">
+                <li class="box-shadow box-shadow3">
                 <img src="./image/img08.jpg" alt="Business" width="370px" height="294px">
                 <div class="producta-padding">
                 <h3 lang="en" class="padding-left-rigt">Growing Business</h3>
